# xfce4-quark-weather-plugin

./: .gitignore  BUGFIXES.md  README.md  install.sh  meson.build  meson_options.txt  qmeson.build
data/: xfce4-quark-weather-plugin.desktop
debian/: changelog  control  copyright
src/: weather-api.c  weather-api.h  weather-config.c  weather-config.h  weather-data.h  weather-icons.c  weather-icons.h  weather-plugin.c  weather-search.c  weather-search.h  weather-ui.c  weather-ui.h
